--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -18,10 +18,12 @@
     "@anthropic-ai/sdk": "^0.36.0",
     "@makilab/shared": "workspace:*",
     "dotenv": "^16.0.0",
+    "node-cron": "^4.2.1",
     "pino": "^9.14.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/node-cron": "^3.0.11",
     "tsx": "^4.0.0",
     "typescript": "*",
     "vitest": "^4.0.18"
